--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -241,7 +241,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                         this.addOwnKeyBinding("ctrl+shift+0", "_zoomToSelection");
                     }
                 }
-                this.addOwnKeyBinding("del", "_removeSelection");
+//                this.addOwnKeyBinding("del", "_removeSelection");
                 this.addOwnKeyBinding("esc", "_closePopup");
                 this.set("_loaded", true);
             },
