--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -57,7 +57,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 <dude-graph-toolbar id="toolbar"
                                     on-dude-graph-toolbar-save="_runSave"
                                     on-dude-graph-toolbar-play="_runPlay"></dude-graph-toolbar>
-            </div>
+            </div>x
         </div>
     </template>
     <script>
