Added meaningful message.

--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -395,7 +395,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                                         renderPoint.point.cgValueType === connectRenderPoint.point.cgValueType;
                             }) || null;
                     if (newRenderPoint === null) {
-                        throw new Error();
+                        throw new Error("Jonathan suce des bites.");
                     }
                     var connection = connectRenderPoint.point.connect(newRenderPoint.point);
                     this.editor.renderer.createRenderConnection({
